Wed Jan 25 17:25:45 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:

          Add get_discovered_participants, get_discovered_participant_data,
          bit_key_to_repo_id and get_handle testing.

Wed Jan 25 17:01:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          RtpsDiscovery should only have one entry, one invocation
          of run_test.pl is enough to run all scenarios.

        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          Allow static linking to OpenDDS_Rtps library with an #include of
          RtpsDiscovery.h ensuring that the linker sees some needed symbol.

        * tests/DCPS/ContentFilteredTopic/ContentFilteredTopic.mpc:
        * tests/DCPS/ContentFilteredTopic/ContentFilteredTopicTest.cpp:
        * tests/DCPS/DcpsIntegration/dcps_integration.mpc:
        * tests/DCPS/DcpsIntegration/topic.cpp:
        * tests/DCPS/Messenger/publisher.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:
        * tests/DCPS/RtpsDiscovery/RtpsDiscovery.mpc:
        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
        * tests/DCPS/SetQosDeadline/SetQosDeadline.mpc:
        * tests/DCPS/SetQosDeadline/publisher.cpp:
        * tests/DCPS/SetQosDeadline/run_test.pl:
        * tests/DCPS/SetQosDeadline/subscriber.cpp:
        * tests/DCPS/UnitTests/UnitTests.mpc:
        * tests/DCPS/UnitTests/ut_BIT_DataReader.cpp:

          Allow static builds to use OpenDDS_Rtps and OpenDDS_Rtps_Udp libs.

Wed Jan 25 16:11:35 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/RtpsDiscovery/dcps.ini:
        * tests/DCPS/RtpsDiscovery/rtps_disc.ini:
        * tests/DCPS/RtpsDiscovery/rtps_disc_tcp.ini:
        * tests/DCPS/RtpsDiscovery/dcps_rtps_udp.ini:
        * tests/DCPS/RtpsDiscovery/run_test.pl:

          Renamed ini files for consistency with other tests.

Wed Jan 25 15:20:06 UTC 2012  Adam Mitz  <mitza@ociweb.com>
